[build-system]
requires = ["setuptools>=69", "wheel", "build"] 
build-backend = "setuptools.build_meta"

[project]
name = "easyfind"
version = "0.1.0"
description = "Find your files easily!"
readme = "README.md"
requires-python = ">=3.14.0"
license-files = ["LICENSE"]

authors = [
    {name = "peter2500zz", email = "2797880090@qq.com"},
]

dependencies = []
